--- a/VRChat/19/1138719.html
+++ b/VRChat/19/1138719.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9bwIqx5eade25UIJOH3+s3Bi+erj0IcRi5x62mVbj8I="></script>
+    "NiHVTSYXizlF4cGZZyUhyYGIbNBW4JbPrK51MDSTXhk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC想定】ダイナミックカラーマテリアル","description":"VRCのゲーム内でリアルタイムに色を変更できるマテリアルです。\nメモリ部分を物に押し付けることでスポイトツールとして使うこともできます。\nVRCでの使用を想定した色可変マテリアルです。StandardとUnlitの2種類を用意しています。(多少シェーダーの知識があれば他のシェーダーに対応させるのも難しくないかと思います。)\n\n2018/12/15　公開開始\n\n・著作権は製作者に帰属します。\n・本製品を使って発生した問題に対しては製作者は一切の責任を負いません。\n\n許可事項\n・二次配布\n・改変・解析\n禁止事項\n・迷惑行為等\n\nなにかあればこちらまで\nTwitter : @HhotateA\nDiscord : hhotatea#0333\n\n【導入方法】\n①ControllPanelをHierarchyにドラッグ＆ドロップして手のボーンの子など操作しやすい位置に置く。(シェイプキーで出し入れできるようにするとよい)\n②任意のアバターのマテリアルにStandardColorChangeかUnlitColorCHangeのどちらかのシェーダーを適応する。\n③マテリアル設定のMemoryの部分にShaderフォルダ内のMemoryを設定する。\n\nhttps://twitter.com/HHOTATEA_VRC/status/1073907802681180160","url":"https://booth.pm/ja/items/1138719","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1138719/d3ba645a-e61b-4879-87e8-292ddee0727d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9bwIqx5eade25UIJOH3+s3Bi+erj0IcRi5x62mVbj8I="></script>
+    nonce="NiHVTSYXizlF4cGZZyUhyYGIbNBW4JbPrK51MDSTXhk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -464,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
