--- a/VRChat/26/1138526.html
+++ b/VRChat/26/1138526.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TgQC9jUDnoXh2+Ypq42vnfY1D2yXIBh3yDN/m57aeRI="></script>
+    "+K0Fv42Cld4vm8P9kWCx1ewRCvNa3nefoIxRi17REIc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"IMR-PCDJ4","description":"IMR-PCDJ4登場！ゲリラライブで使うもよし！お部屋のインテリアにも！\nカラーバリエーションは全5種！コーディネートも自在！\n\n・はじめに\n当製品は当社のIMR-PCDJ4を販売用モデルとして調整したモデルとなります。\nぜひともお客様の手でオリジナリティを出してご使用いただければ嬉しく思います。(もちろんそのままご使用いただいても問題ありません)\n\n・ご使用に際してのルール\n1.著作権は作者であるRocket-Lapinに帰属します。放棄はしませんのでご注意ください。(改変されても大元の権利はRocket-Lapinに帰属します。)\n\n2.以下のような使用は禁止します。\n　　・公序良俗に反する利用\n　　・政治的、宗教的主張に関する利用\n　　・再配布、再販売は禁止(VRCなどのように購入者本人が使用するためにアップロードが必要な場合は、本人が使用する場合に限り許可します。\n　　　アバターペデスタルなどで本人以外の方が利用できる状態にすることは禁止させていただきます。)\n　　・自作発言はしないでね♡(ご自身で改変された箇所に関しての自前加工発言、自慢はしてもらって大丈夫です。むしろその技術がすごいのです、\n　　　どんどん広めましょう！)\n\n3.やってもいいこと。\n　　・テクスチャ改変、モデル改変、営業目的での利用、収益化目的の動画の主催、参加、映り込みOK、VTuber活動もやっていただいて構いません。\n　　　その時は教えてね！見に行くよ！（VTuber活動をされる際は改変をお願いします！)\n\n4.やってほしいこと（重要！）\n　　・DJしようぜ！\n\n5.免責事項\n　　・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属する\n　　　いかなる団体も、一切の責任を負わないものとします。\n\n\n　　　　以上、取扱説明書でした。\n\n　　　不明な点、質問、問い合わせなどありましたら@RocketLapinまたはrocketlapin@gmail.comまで連絡ください。\n\n　　　基本スタンダードシェーダーがおすすめですが、同梱の2Dテクスチャをご利用いただければその他シェーダーでも安定した発色が可能です。\n","url":"https://booth.pm/ja/items/1138526","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/4a2068d0-e3b2-4bfe-af45-d14222c245e6/i/1138526/6008cbef-362a-4fa3-ba8b-f993cc0dedaa_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TgQC9jUDnoXh2+Ypq42vnfY1D2yXIBh3yDN/m57aeRI="></script>
+    nonce="+K0Fv42Cld4vm8P9kWCx1ewRCvNa3nefoIxRi17REIc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
