--- a/VRChat/28/1138528.html
+++ b/VRChat/28/1138528.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eMdLRUFKFudmkcb3kzFv9lN5p9D/6TgaL2GyPDsVJnc="></script>
+    "IX37YuLnod+1bvplaC/DKSLyfVnGokMNU1Y/PYH4B94="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"RaymarchingStrapシェーダー","description":"白黒の画像からオブジェクトを作り出すシェーダーです\nアバターのアクセサリーに使ったり、ワールドの小物として使ってください\n\n紹介ツイート・使用例↓\nhttps://twitter.com/gatosyocora/status/1064859851195539456\n(制作過程がリプで連なっています)\n","url":"https://booth.pm/ja/items/1138528","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1138528/784e2cd8-94ae-4a62-8610-9878057cee40_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eMdLRUFKFudmkcb3kzFv9lN5p9D/6TgaL2GyPDsVJnc="></script>
+    nonce="IX37YuLnod+1bvplaC/DKSLyfVnGokMNU1Y/PYH4B94="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -514,9 +514,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
