updated at: 2023-07-31 19:09, AF式注射器 V1.5 - 迷宮図書館購買部 - BOOTH

--- a/VRChat/64/1137964.html
+++ b/VRChat/64/1137964.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "W5WVVCG9cFhrzjmhYCyMZ00fzAb4p6diHqVRXluFx78="></script>
+    "Mc2eMVeqx4E4qQRED+9g2tlaTCX8ABNHRODKww4eWik="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AF式注射器 V1.5","description":"キャップ付きの注射器モデル\n\nVRChatでの使用を想定しています。\n\n針先は鋭くなっていますので、人に向けたりする時は注意してください。\n\nArxCharacterShadersを使用しています。（https://booth.pm/ja/items/2493539）\n\n◆旧モデルからの変更点\n\n・ポリゴン削減\n　・1432　→　808\n　・円柱を20角から10角に変更\n\n・マテリアル削減\n　・6　→　4（5）\n\n・シェーダー変更\n\n・サイズを5分の1に変更（手のひらサイズ\n\n・UVを整理\n\n・テクスチャを少し変更","url":"https://booth.pm/ja/items/1137964","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/d3d523d1-e84d-4b41-911c-4b8144839726/i/1137964/d3b49b64-ad13-4e86-bc5a-abaa00da8cd6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="W5WVVCG9cFhrzjmhYCyMZ00fzAb4p6diHqVRXluFx78="></script>
+    nonce="Mc2eMVeqx4E4qQRED+9g2tlaTCX8ABNHRODKww4eWik="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -464,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
