--- a/VRChat/38/1137538.html
+++ b/VRChat/38/1137538.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fr2mRVU0Al7W7vFWMNPlFzqJQ+2qbVnYgDOqm0R4vr4="></script>
+    "+7qVEozJbJu5nJHRA2+ctEg+dqOHmAjRt3yg1UegBE8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリスタル翼（アニメーション付）","description":"【PC版VRChat向け】\nそれは、暗い時に不思議な光を放つ、クリスタル風の羽をまとめた翼――\n\nデザイン差分や片翼対応など細かな作り分けを行い、48パターンの3Dデータ（FBXファイル）を収録しています。\n更に、カスタマイズ用に5色の色変えテクスチャ、4種類の発光パターン、2種類のアニメーションを用意しました。\n発光させないパターンも含めると、2400パターンのカスタマイズが、本品に収録されているものだけで可能となっております。\n\n2019/03/07 Arktoon Shaderを採用。ver1.1としてアップデート\n2020/04/07 ver1.2として、Unity2018版のVRChatに対応させました。Arktoon shaderを1.0.2.6に、まんまるしぇーだーを3.2にバージョンアップしました","url":"https://booth.pm/ja/items/1137538","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/d93c3674-a136-49a1-a2f3-9a8202a223cd/i/1137538/eff8997b-5194-42df-a6d5-fd7afb209c95_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fr2mRVU0Al7W7vFWMNPlFzqJQ+2qbVnYgDOqm0R4vr4="></script>
+    nonce="+7qVEozJbJu5nJHRA2+ctEg+dqOHmAjRt3yg1UegBE8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -504,9 +504,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
