--- a/VRChat/04/1137404.html
+++ b/VRChat/04/1137404.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "oSv2/xMcxEx3A9byf22yUHTSWJ1VsjjRAFx+hwtrWug="></script>
+    "kMwhTR7IZA26vgtbOL7ZXdiiH/J0SjqhocSocDIE1aQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Colt 1851 Navy Revolver","description":"VRChat3Dモデル\n\nファイル\n・モデル(.fbx,.blender)\n・テクスチャ(.png)\n・△ポリ5,541","url":"https://booth.pm/ja/items/1137404","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/5ee922d1-2cd5-4d24-85a0-11c6135bb6ab/i/1137404/37f70171-cb5a-4657-9c1a-fd5bcc19da32_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oSv2/xMcxEx3A9byf22yUHTSWJ1VsjjRAFx+hwtrWug="></script>
+    nonce="kMwhTR7IZA26vgtbOL7ZXdiiH/J0SjqhocSocDIE1aQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -430,9 +430,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
