--- a/VRChat/17/1136717.html
+++ b/VRChat/17/1136717.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "K7Hxg2beWfWZov0ftOYSPxKcF6HyUAOfBGgLGOFTKkk="></script>
+    "adVzJy5GmJZBqkJ3igkjNU9HO9sZHmFV/FU4u0yvwuQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け オリジナル３Dモデル】チェック","description":"VRchat向けのオリジナルモデルとなっております。\n身長140cmほどでチェス駒と猫がモチーフとなっています。\n\n\n体・服・小物などオブジェクト別けなど、\n少々ですがUnity上のみで完結できる改変方法も想定してあります。\n\n◆◆小さい方の『でふぉるめチェック』はこちらをご覧ください◆◆\nhttps://kara-no-atelier.booth.pm/items/1524584\n\n\nお手軽設定用にunity packageを同梱しています。\nシェーダは初期設定用にUnlit/Textureを使用していますが、\n裏面表示が可能なシェーダの方がおススメです。\n\n\n概ね設定済みのVRM形式ファイルも同梱していますのでVRM対応のコンテンツにもご利用いただけます。\n※eyeboneなど視線関係のみ未設定\n\n\n【unity2019環境での動作確認済み】\n※Mipmapエラーが出た場合は、AutoFixボタンを押せば大丈夫です\n※Dynamic bone（Unityストアの有料アセット）をお持ちでない場合は、アバターに設定済みのDynamic boneコンポーネントを外す必要があります\n\n【2021/8 VRCアップデート動作確認済み】\n※アバター2.0のSDK仕様となっています\n\n\nご購入前に説明及び利用規約が記載されておりますので、\n必ずお読みいただき内容ご確認の上、ご購入をお願いいたします。\n\n\n動作見たい方用に『VRoid Hub』に配置しました。\nhttps://hub.vroid.com/characters/52156203792523992/models/8769872602489318228\n\n\n\nver2.0では『ユニティちゃんトゥーンシェーダー2.0』を使用しています。\n\n\n不具合などはTwitter【https://twitter.com/Aw_ritsushitA】の方へフィードバックください。","url":"https://booth.pm/ja/items/1136717","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/a12bdc4d-2b9f-4309-a04e-8e40fb63d9f6/i/1136717/ea30d6cc-9a77-4d07-8309-b3741486f30c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="K7Hxg2beWfWZov0ftOYSPxKcF6HyUAOfBGgLGOFTKkk="></script>
+    nonce="adVzJy5GmJZBqkJ3igkjNU9HO9sZHmFV/FU4u0yvwuQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -577,9 +577,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
