updated at: 2023-07-31 19:11, 2017年ニューイヤーメガネ【VRChat向け】 - 白亜重工 - BOOTH

--- a/VRChat/93/1136093.html
+++ b/VRChat/93/1136093.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sxJ0LR8/mfjzZUKRLgJdlIse2RHVQD0zB6ykxlMP688="></script>
+    "DmtYQLcMG8icPywCgdUCst3ZXtXxH2aMwMUfsZrBJUo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"2017年ニューイヤーメガネ【VRChat向け】","description":"ハッピーニューイヤー！！！\n2017年　あけましておめでとうございます！\n白、赤、黄色Verが入っています\nエミッションが入ってるはずなので暗闇で光ります\n追記　シェイプキーでメガネ部分の横幅、縦幅をある程度調整できます\n\nー製品内容ー\n・blendデータ\n・fbxデータ\nポリゴン数337(Blender上)\n・UV画像\n・本体テクスチャ(白、黄、赤)\n・エミッション用テクスチャ(白、黄、赤)\n・UnityPackage\n・Read Me\n\nUnityPackageを入れるとHappyNewYear!というファイルが出てくると思うのでその中に入ってます\n\n以下規約に従った上で、ご自由にお使いください！\n改変、商用利用は可です！\n\nー利用規約ー\n当データの著作権は製作者である白亜重工(白雪)に帰属します\n●禁止事項\n当データ(改変した場合も含む)の再配布、転載\n●免責事項\n当データを使用して発生したトラブルに一切の責任を製作者は負いません\nご利用は自己責任でお願いします","url":"https://booth.pm/ja/items/1136093","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1136093/84e59f97-36e5-4b07-8d4f-17affefb5e36_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sxJ0LR8/mfjzZUKRLgJdlIse2RHVQD0zB6ykxlMP688="></script>
+    nonce="DmtYQLcMG8icPywCgdUCst3ZXtXxH2aMwMUfsZrBJUo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -497,9 +497,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
