updated at: 2023-07-31 19:12, オリジナル3Dモデル『みらくる』 - もろもろ喫茶 - BOOTH

--- a/VRChat/89/1132889.html
+++ b/VRChat/89/1132889.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "R9oKIrV0TR832oggskDBf4y8B/T2RPkjroZLGVD1D4c="></script>
+    "ruF7IaSUI8uVK1RkyHE/q2VV57eRiiJvVPUZakypDUg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『みらくる』","description":"VRchatでの利用を想定したアバターモデルです。\n比較的ポリゴン数が少ないのでアクセサリーの追加等の改変がしやすいかと思います。\n\n以下にモデルについての説明、利用規約が記載されておりますので、\nご購入の前に必ずお読みいただき、ご了承された上でのご購入をお願いいたします。\n\nVRChat向けの設定をしておりますが、MMD等他ソフトでのご利用は規約違反がない限り自由です。","url":"https://booth.pm/ja/items/1132889","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/882fdeef-0e51-49f5-a5e3-f5b466159a8a/i/1132889/bfebc71c-6d89-4dbd-94b1-8aadb8226e5f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="R9oKIrV0TR832oggskDBf4y8B/T2RPkjroZLGVD1D4c="></script>
+    nonce="ruF7IaSUI8uVK1RkyHE/q2VV57eRiiJvVPUZakypDUg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -489,9 +489,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
