updated at: 2023-07-31 19:16, VRoidStudio制服スカート用タータンチェック柄 - イキテク - BOOTH

--- a/VRChat/09/1337909.html
+++ b/VRChat/09/1337909.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jvV+MNH/qKvXdULY3qSJpgVkNWwmmh7fqukL3haTABM="></script>
+    "WCpC1v+SrvbSNxEhoWuFKCjkLz7Ua8CobU1mvJHkE4A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoidStudio制服スカート用タータンチェック柄","description":"VRoid Studioの制服スカート用テクスチャ素材セットです。※モデルは含まれておりません。\n\n【収録内容】\n●通常版(無料)\n001_レッド\n002_ブルー\n003_グリーン\n004_イエロー\n005_ライトブルー\n006_ピンク\n007_ブラック\n008_ベージュ\n\n\n●ご支援版\n通常版との差異はございません。\n\n\n【動作環境】\nVRoid Studio v0.6.4が正常に動作する環境。\n\n【インストール方法】\nZIPファイルから任意の場所へ解凍。\n\n【設定方法】\n制服スカートのテクスチャに適用させます。詳しくは同梱のreadme.txtを参照して下さい。\n\n\n【ご利用について】\n著作権は作者iktkに帰属します。\n\n●本コンテンツは、以下のような使い方ができます。\n・商用利用できます。\n・修正、改造、OKです。\n・漫画、イラストの素材に使えます。\n・自作ゲーム内のコンテンツとして使えます。\n・使用に対しての報告やクレジット表記の必要はありません。(使用作品の報告や、本素材を紹介して頂ける場合は、大変感謝します。)\n\n\n●本コンテンツは、以下の使い方はできません。\n・画像そのもの又は修正後の画像を、再配布又は販売等。\n・VRoidHubなどで第三者がテクスチャを自由に使えるようにする等。\n\nその他、詳しくは同梱の「readme.txt」をご確認下さい。\n\n","url":"https://booth.pm/ja/items/1337909","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c03b37a4-d050-4402-83ec-9a5679b9c936/i/1337909/560b8f78-f270-469d-9b65-b27653c2de62_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jvV+MNH/qKvXdULY3qSJpgVkNWwmmh7fqukL3haTABM="></script>
+    nonce="WCpC1v+SrvbSNxEhoWuFKCjkLz7Ua8CobU1mvJHkE4A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -448,9 +448,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
