updated at: 2023-07-31 19:16, オリジナル3Dモデル-△5000-『Kona_コナ_』 - たーる精製所 - BOOTH

--- a/VRChat/83/1337683.html
+++ b/VRChat/83/1337683.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mzs6C9KsEqk1bxdZJAwk4waOMJ5PMlPHfMTyDt9hqv0="></script>
+    "tgB3WwPqJRkOohJ81/g8k1RLhU82XbwUCITf+oyIy6k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル-△5000-『Kona_コナ_』","description":"3Dオリジナルモデル\n\nKona-コナ-△4991\n\n\nVRChatでの使用を想定した3Dモデルです。\nOculus Quest版VRChatに対応しています。\n\nフルトラッキングにも対応しており、PC版での使用も可能です。快適な読み込みを保証します。\n\n褐色肌に加え、肌色Ver.も含めたテクスチャ6種類も同梱しており、さらにpsdファイルもおまけでついてきます。\n\nそのほか\n・リップシンク完全対応\n・表情各7種類(blend可)\n\n【内容】\n・設定済Unitypackage(VRC SDKは各自ダウンロードなりして下さい)\n・FBX\n・テクスチャ\n\n\n【禁則事項】\n・自作発言および再配布(public設定でのアップロードやワールドペデスタルに置くこともも禁止)\n・営利活動\n\n著作権はresolにあり放棄しておりません。テクスチャの改変は自由に行ってください。\n\n【免責事項】\n・当モデルを使用することで使用者側に不利な問題が生じた場合、いかなるものであっても\n当方は責任を一切負いません\n\n何かありましたらこちら(https://twitter.com/resol72)まで連絡してください。\n\n5/1 追記。手のウェイトを調整しました。睡眠用アバターが縦になる現象を修正しました。お手数ですが、kona2.zipをダウンロードしてください。\n\n追記　UnityでQuest用にアップロードする際には、VRC SDKの専用シェーダーをお使いください。\n","url":"https://booth.pm/ja/items/1337683","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/b9012e25-620b-4a66-a927-58ca245f129c/i/1337683/7b683a39-59bd-4e1e-99c2-8868f37bd40c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mzs6C9KsEqk1bxdZJAwk4waOMJ5PMlPHfMTyDt9hqv0="></script>
+    nonce="tgB3WwPqJRkOohJ81/g8k1RLhU82XbwUCITf+oyIy6k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
