updated at: 2023-07-31 19:19, ホースバンド - しあさんちのダンボール箱 - BOOTH

--- a/VRChat/91/1128891.html
+++ b/VRChat/91/1128891.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Bf6ZwvBESWB3kYQv85otHr4DtNSVcZ0sfL3DfFlFd1Y="></script>
+    "80B/bUiZJzs6eZ+uAbTdD4/MdD/z3owFanIYFyewLX4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホースバンド","description":"クリスマスシーズンにぴったり？のリングを作りました。\n大好きな方とお揃いでつけてみてはいかがでしょうか？\n私はつけません。\n△564※ネジは回りません\n\n改変、商用利用、アバターやワールドへの同梱可\n再配布不可\n\nかぷち屋のブースもよろしくね\nhttps://capettiya.booth.pm/","url":"https://booth.pm/ja/items/1128891","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f74fba72-857f-46dc-880c-6cd834faad0f/i/1128891/3474bae8-c263-49f1-9ffd-f64c081517fe_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bf6ZwvBESWB3kYQv85otHr4DtNSVcZ0sfL3DfFlFd1Y="></script>
+    nonce="80B/bUiZJzs6eZ+uAbTdD4/MdD/z3owFanIYFyewLX4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -354,9 +354,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
