updated at: 2023-07-31 19:30, 正2の冪乗角形のメッシュ - Package Shop @aivrc - BOOTH

--- a/VRChat/25/1105725.html
+++ b/VRChat/25/1105725.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JkDCDjlDBPYIYgT1LpyZCbpH9wXZz+E7jL5IhoFwjDw="></script>
+    "i7ySuLeu+zzjCzlJLW6Pr1bQlBXuOF+86xC869BWhAc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"正2の冪乗角形のメッシュ","description":"丸い鏡や丸いアイコン表示などに使えるメッシュです。\n\n内容物\n・正方形メッシュ\n・正8角形メッシュ\n・正16角形メッシュ\n・正32角形メッシュ\n・正64角形メッシュ\n・正128角形メッシュ(ほぼ円形)","url":"https://booth.pm/ja/items/1105725","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dfbd4ce6-2e9e-476c-a792-d2031d877f10/i/1105725/ef7a5064-75a2-42be-897e-c51b6a3316a9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JkDCDjlDBPYIYgT1LpyZCbpH9wXZz+E7jL5IhoFwjDw="></script>
+    nonce="i7ySuLeu+zzjCzlJLW6Pr1bQlBXuOF+86xC869BWhAc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -373,9 +373,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
