updated at: 2023-07-31 19:30, 【VRChat向けアバター】Humanoid形式対応3Dモデル「リタ」 - 運ばれうさぎ小屋 - BOOTH

--- a/VRChat/62/1104462.html
+++ b/VRChat/62/1104462.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "F0D5H3kmaiVWoDrQCa0GXrh/BinZTFDeBELsKZF990Y="></script>
+    "mKr1re/TayN5Nc6jYnmVx2kwvh16ZsiTPh6CuPXypjg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向けアバター】Humanoid形式対応3Dモデル「リタ」","description":"【VRChat向けアバター】Humanoid形式対応3Dモデル「リタ」\n\n〇モデル概要\n・モデル名:リタ\n・作者:zouzu\n\n〇キャラクター\n女性型の炎の魔人イフリータが、力を封印された姿です。\n現在、力を封印した人のメイドをしています。\nあと僕っ娘です。\n\n〇内容物\n・3DモデルFBXデータ\n・テクスチャPNGデータ\n\n〇仕様\n・ポリゴン数△16,956枚\n・VRChatに準拠したリップシンク用シェイプキー\n・DynamicBone対応ボーン設定済(髪/スカート)\n・アイトラッキング未対応\n・フルトラッキング未確認\n\n〇おすすめシェーダーについて\n・MnMrShader/まんまるしぇーだー　ver.1.3\n・Cubeds Unity Shaders\n\n〇ご利用に関して\nVRChatへのインポートに関してはご自身で行ってください。\n\n〇利用についての規約\n本モデルを購入した時点で本利用規約に同意したものとします。\n\n・当モデルはVRChat内でアバターとして使用することを想定して作られたモデルです。\n　その他のソフト内での動作については保証しかねます。\n・著作権は製作者：zouzu　が所持しており、これを放棄していません。\n・何らかの改変あり、なしに関わらずこのモデルを購入していない第三者がこのモデルを使用できるようにすることは禁止です。\n　また、このモデルの転売も禁止です。\n・同梱されたテクスチャファイルは個人利用に限り可能で、配布は禁止です。\n・このアバターを改変することはメッシュ、テクスチャを問わず可能です。\n・宗教的、政治的または反社会的な使用は禁止です。\n・商用利用も可能とします。このモデルを使ったVtuber活動の収益化も許可します。\n　（収益化される動画へゲストとして映り込むことも許可します）\n・R18での使用は許可します。\n・Unityで制作したゲームへの使用は、第三者へこのモデルのデータが譲渡されないことを条件に許可します。\n\n　VRChat内での使用について\n・このモデルの利用規約はVRChat内での使用に関してはこちらの規約が優先となります。\n・VRChat内で使用するためにVRChatにこのアバターをアップロードすることを許可します。\n・VRChat内ではVRChatの規約に従い使用してください。\n・このモデルのアバターペデスタルの設置は許可のない限り禁止です。\n・他の人の迷惑となる行為はお止めください。\n\n〇免責事項\n・当モデルデータの利用において、何らかのトラブル、損失が生じた場合に製作者：zouzu　は一切の責任を負いません。\n・利用規約の内容は予告なく変更することがあります。\n\n〇不明な点等がございましたら、製作者：zouzu（twitterID:@zouzu23）へとお尋ねください。\n\n〇修正履歴\n\n◇2018.11.24◇\nVer.1.0　販売開始","url":"https://booth.pm/ja/items/1104462","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/eebc431e-9433-4f38-aaf9-669c8659dedf/i/1104462/d9554de9-1d04-4293-94c7-9906085a8fa6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F0D5H3kmaiVWoDrQCa0GXrh/BinZTFDeBELsKZF990Y="></script>
+    nonce="mKr1re/TayN5Nc6jYnmVx2kwvh16ZsiTPh6CuPXypjg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -439,9 +439,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
