updated at: 2023-07-31 19:33, 3Dモデルセット　ArmsPack.01 - 麻婆弾ストア - BOOTH

--- a/VRChat/69/1099269.html
+++ b/VRChat/69/1099269.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hGHckvzgrKOdMh5ykYZv4wvGiRyQqCp2XnGTf93if8A="></script>
+    "2sAoHLofQ3NskniNWVxvHdZYEcO1AS42RKJcixNBcRw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデルセット　ArmsPack.01","description":"□Arms Pack.01\n複数のモデルの詰め合わせです。\n\n\n\n□内容\n・xx.fbx　本体\n\n・xx.unitypackage　本体2\n\n・readme.txt これ\n\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/weaponフォルダに作成されます。\n\n\n□設定等\n\n・B/O-22オービットシステム\n\n　飛行型の攻撃用自律ユニットです。\n\n\n・mk5マウントアーム\n\n　武装をマウントする為のアームです。\n\n\n・N300GL\n\n　N300ハンドキャノンのロングバレルモデルです。\n\n\n・NPL-244\n\n　火薬によって発射した弾頭をリニアシステムによって再加速する特殊拳銃です。\n\n\n\n\n\n□利用規約\n\n原則として再配布を禁じます。\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/11/20：販売開始","url":"https://booth.pm/ja/items/1099269","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1099269/eb6a867b-ab58-4462-b936-dc338e55530b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hGHckvzgrKOdMh5ykYZv4wvGiRyQqCp2XnGTf93if8A="></script>
+    nonce="2sAoHLofQ3NskniNWVxvHdZYEcO1AS42RKJcixNBcRw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
