updated at: 2023-07-31 19:42, エンゲージリング　婚約指輪　結婚指輪にも - アリスの落とし子直売所 - BOOTH

--- a/VRChat/12/1088812.html
+++ b/VRChat/12/1088812.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YsXy4s2xsZQbkpdKWrp6PM+d0m1mXiu5twpTIG4bjVw="></script>
+    "ytKQPm5h+gzCHm+1mvU2gdjEfSG4CSFD+7QZ+Jzw/o8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"エンゲージリング　婚約指輪　結婚指輪にも","description":"■VRchat等で使用することを想定して作られた指輪です\n\n■ガバが目立ちます\n\n■箱もおまけで付きます\n\n■ポリゴン数：4980\n\n■細かいことVRchat推奨　改造化　商用利用可　\n\n■禁止事項：自作発言（改造品含む）\n\n■二次配布は一度のみ可能です。　意中のあの子にあげましょう（2人以上に渡す場合はBOOTHして頂けると助かります）\n\n※リングの部分が細いとのご指摘を受け、ちびっと太くしました。新旧どちらもご用意しておりますので、お好みでお使いください。","url":"https://booth.pm/ja/items/1088812","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/565e6dcd-600c-4884-8a13-2faabbfd8cdf/i/1088812/e9da8c4d-8741-4c39-92b9-bdfe4ed4889c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YsXy4s2xsZQbkpdKWrp6PM+d0m1mXiu5twpTIG4bjVw="></script>
+    nonce="ytKQPm5h+gzCHm+1mvU2gdjEfSG4CSFD+7QZ+Jzw/o8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -391,9 +391,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
